use modified file watcher from PortaCode fork

--- a/tests/Fabulous.Cli.Tests/Fabulous.Cli.Tests.fsproj
+++ b/tests/Fabulous.Cli.Tests/Fabulous.Cli.Tests.fsproj
@@ -10,7 +10,8 @@
         <Compile Include="..\..\paket-files\neutral\fsprojects\FSharp.Compiler.PortaCode\src\CodeModel.fs" Link="CodeModel.fs" />
         <Compile Include="..\..\paket-files\neutral\fsprojects\FSharp.Compiler.PortaCode\src\Interpreter.fs" Link="Interpreter.fs" />
         <Compile Include="..\..\paket-files\neutral\fsprojects\FSharp.Compiler.PortaCode\src\FromCompilerService.fs" Link="FromCompilerService.fs" />
-        <Compile Include="..\..\paket-files\neutral\fsprojects\FSharp.Compiler.PortaCode\src\ProcessCommandLine.fs" Link="ProcessCommandLine.fs" />
+        <Compile Include="..\..\paket-files\neutral\kevinha\FSharp.Compiler.PortaCode\src\Watcher.fs" Link="ProcessCommandLine.fs" />
+        <Compile Include="..\..\paket-files\neutral\kevinha\FSharp.Compiler.PortaCode\src\ProcessCommandLine.fs" Link="ProcessCommandLine.fs" />
         <Compile Include="..\..\paket-files\neutral\fsprojects\FSharp.Compiler.PortaCode\tests\PortaCodeTests.fs" />
         <Compile Include="..\..\src\Fabulous.Cli\fscd.fs" Link="fscd.fs" />
         <Compile Include="Tests.fs" />
